<resources>
    <string name="app_name" translatable="false">easyfit</string>
    
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_logout" translatable="false">Logout</string>

    <string name="title_activity_login" translatable="false">Sign in</string>




    <string name="facebook_app_id" translatable="false">255971051400488</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for
        providing email
        completions."
    </string>

    <string name="empty_workoutOptions_list" translatable="false">No workout options available
    </string>
    <string name="workout_duration" translatable="false">Add Workout Duration</string>
    <string name="workout_logit" translatable="false">Log It</string>

    <!-- Key name for storing location status in SharedPreferences -->
    <string name="pref_location_status_key" translatable="false">loc-status</string>


    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">easyfit.android.neeraja.com</string>
    <string name="content_authority" translatable="false">com.neeraja.android.easyfit</string>
    <string name="DateText" translatable="false">Mar 10, 2016</string>
    <string name="title_activity_workout_history" translatable="false">WorkoutHistory</string>
    <!--<string name="section_format">Hello World from section: %1$d</string>-->
    <string name="empty_forecast_list" translatable="false">No Workout Records to display</string>
    <string name="test_text" translatable="false">Test</string>
    <string name="title_activity_base" translatable="false">BaseActivity</string>

    <string name="change_image">Add Photo</string>
    <string name="about_text">Developer : Neeraja\n\n
        Easyfit is a simple app to log physical activities and workouts in a journal.\n


    </string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <string name="tilte_activity_about">About</string>
    <string name="nav_text_home">Home</string>
    <string name="nav_text_login">LogIn</string>
    <string name="nav_text_logout">LogOut</string>
    <string name="nav_text_profile">Profile</string>
    <string name="nav_text_recordworkout">Record Workout</string>
    <string name="nav_text_calendar">Calendar View</string>
    <string name="nav_text_workouthistory">Workout History</string>
    <string name="nav_text_about">About</string>
    <string name="text_name">Name</string>
    <string name="text_username">User Name</string>
    <string name="text_userage">User Age</string>
    <string name="text_age">Age</string>
    <string name="text_useremail">username@email.com</string>
    <string name="text_personal">Personal</string>
    <string name="text_100lbs">100 lbs</string>
    <string name="text_weight">Weight</string>
    <string name="text_80lbs">80 lbs</string>
    <string name="text_goalweight">Goal Weight</string>
    <string name="text_91978654321">+91 972-426-8906</string>
    <string name="text_mobile">Mobile</string>
    <string name="text_email">Email</string>
    <string name="text_save">Save</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_noaccountyet_createone">No account yet? Create one</string>
    <string name="text_createaccount">Create Account</string>
    <string name="text_alreadymember_login">Already a member? Login</string>
    <string name="widget_minutes_textsize">12</string>
    <string name="share_text">Share</string>
    <string name="pref_current_location_desc">Use my location</string>
    <string name="text_current_location">Enter City Name, State</string>



    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server
        is not returning valid data. Please check for an updated version of this Football App
        .</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>
    <string name="empty_forecast_list_no_network">No information available. The network is not
        available to fetch data</string>
</resources>
