<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.neeraja.android.easyfit.UserAccountInfo">
<RelativeLayout android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
                    android:id="@+id/imagePicker"
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                     >

        <ImageView
            android:id="@+id/imageView_profile"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:maxHeight="400dp"
            android:src="@drawable/profilepic"
            android:layout_margin="10dp"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/btn_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_image"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:theme="@style/pinkButton"
            android:layout_gravity="center_vertical" android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:typeface="sans" android:textStyle="bold" />
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_toRightOf="@id/imageView_profile"-->



    </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagePicker"
            >



            <!-- Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText android:id="@+id/user_name"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textCapWords"
                          android:hint="@string/text_name" />
            </android.support.design.widget.TextInputLayout>

            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/user_email"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textEmailAddress"
                          android:hint="@string/text_email" />
            </android.support.design.widget.TextInputLayout>

            <!-- Age Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/user_age"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="number"
                          android:hint="@string/text_age"/>
            </android.support.design.widget.TextInputLayout>

            <!-- weight Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/user_weight"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="number"
                          android:hint="@string/text_weight"/>
            </android.support.design.widget.TextInputLayout>

             <!-- Goal weight Label -->
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText android:id="@+id/user_goal_weight"
                                      android:layout_width="match_parent"
                                      android:layout_height="wrap_content"
                                      android:inputType="number"
                                      android:hint="@string/text_goalweight"/>
                        </android.support.design.widget.TextInputLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"

                android:orientation="horizontal" android:layout_weight="1">
            <!-- current location Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content" android:layout_weight="0.29">
                <EditText android:id="@+id/user_current_location"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="text"
                          android:hint="@string/text_current_location"/>
            </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location_pickerimage"
                    android:src="@drawable/ic_current_location"
                    android:contentDescription="@string/pref_current_location_desc"
                    android:layout_gravity="end|center_vertical"
                    android:tint="@color/material_deep_teal_500" android:layout_marginRight="40dp"/>


               <!-- <include layout="@layout/pref_current_location"/>-->

            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/poweredBy"
                android:src="@drawable/powered_by_google_light"/>
            <!-- save user info Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:theme="@style/pinkButton"
                android:layout_gravity="center_horizontal" android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:typeface="sans" android:textStyle="bold"
                android:text="@string/text_save"/>


        </LinearLayout>


    </RelativeLayout>
</ScrollView>

